tests/type/errors/bad_array_size2.typedsol
4:10 error: Expected integer for array size